--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,16 @@
 html {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
-* *::before *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 body {
-  background-color #ccc;
-  font-family:sans-serif;
+  background-color: #ccc;
+  font-family: sans-serif;
 }
 
 h1 {
@@ -16,6 +18,6 @@ h1 {
 }
 
 article {
-  font-style: italic
+  font-style: italic;
   color: #666;
 }
